# raytacing-attempt

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  camera.h  hittable.h  hittable_list.cpp  hittable_list.h  main.cpp  random.h  ray.cpp  ray.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
src/shapes/: sphere.cpp  sphere.h
